fix: improved sizes of wrapped images in `homes` section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -325,7 +325,8 @@ h2.advantages__heading:after {
 }
 
 .homes__list--image {
-  object-fit: scale-down;
+  width: inherit;
+  height: inherit;
 }
 
 .homes__list--title {
